Description: Drag and droping headings from navigator to document create a copy instead of an hyperlink, even when "Insert as Hyperlink" is checked. Steps to Reproduce: 1. Create a new document 2. Create headings 3. Check "Insert as Hyperlink" 4. Drag and drop heading to document. Actual Results: Heading and the following paragraphs are copied. Expected Results: An hyperlink should be inserted. Reproducible: Always User Profile Reset: Yes Additional Info: Part of Bug #101613 seems to describe this bug in a more specific situation. User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:51.0) Gecko/20100101 Firefox/51.0
Update: this bug is happening for me only with the option "SAL_USE_VCLPLUGIN=gtk3", which I need in order for LibreOffice to display correctly.
Confirmed in Version: 5.4.0.0.alpha0+ Build ID: 6152bf9ee9b2e348dee854921a5a5db1cfc72995 CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk3; Locale: ca-ES (ca_ES.UTF-8); Calc: group and Version: 5.2.0.0.alpha1+ Build ID: 5b168b3fa568e48e795234dc5fa454bf24c9805e CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; Locale: ca-ES (ca_ES.UTF-8) but not in Version: 5.4.0.0.alpha0+ Build ID: 6152bf9ee9b2e348dee854921a5a5db1cfc72995 CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk; Locale: ca-ES (ca_ES.UTF-8); Calc: group
after chasing this around the place, there seems to be a magic flag "ACTION_DEFAULT" and writer won't insert the link unless this is set on the paste event.
Caolán McNamara committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=55e7f73640d754bf0004a0d8a989e0a20de00351 Resolves: tdf#107031 writer depends on ACTION_DEFAULT It will be available in 5.4.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
fixed in master now, 5-3 backport in gerrit
*** Bug 101613 has been marked as a duplicate of this bug. ***
Caolán McNamara committed a patch related to this issue. It has been pushed to "libreoffice-5-3": http://cgit.freedesktop.org/libreoffice/core/commit/?id=3247dce15d041d178fa2a855b53415a80df16a28&h=libreoffice-5-3 Resolves: tdf#107031 writer depends on ACTION_DEFAULT It will be available in 5.3.3. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
In my copy, it creates a hyperlink or a text of the file path, but refuses to create a copy. I've reported that as 113085.