Resolves: tdf#107031 writer depends on ACTION_DEFAULT

to do its standard "honor the DragDropMode setting" on
drag and drop of outline headings into a document

Change-Id: Ie154fb237de57ae18fa22d6f50dbf890fb9ebc77